--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -1,66 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <LINK REL="SHORTCUT ICON" HREF="/assets/images/doodle-bob-background-placeholder.jpg"> 
-    <meta name="google-signin-client_id" content="701536274092-ou0ungjmlt7gij8e8huot10nu96lr2tf.apps.googleusercontent.com">
+    <link
+      rel="SHORTCUT ICON"
+      href="/assets/images/doodle-bob-background-placeholder.jpg"
+    />
+    <meta
+      name="google-signin-client_id"
+      content="701536274092-ou0ungjmlt7gij8e8huot10nu96lr2tf.apps.googleusercontent.com"
+    />
     <link rel="stylesheet" href="/css/timer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tortellini Timer!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="background-img">
-        <main>
-            <c-modal id="c-modal"></c-modal>
-            <c-settings id="c-settings" style="display: none"></c-settings>
-            <c-analysis id="c-analysis" style="display: none"></c-analysis>
-            <c-task-list id="c-task-list" style="display: initial"></c-task-list>
-            <div class="top-bar-buttons">
-                <c-control-button onclick="transition(window.current_state, 'timer_open_settings')">Settings</c-control-button>
-                <c-control-button onclick="transition(window.current_state, timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">Tasklist</c-control-button>
-                <c-control-button onclick="transition(window.current_state, timer_init == window.current_state ? 'timer_open_analysis' : 'timer_init')">Analysis</c-control-button>
-                <c-control-button onclick="document.getElementById('c-task-list').refresh_list()">Alert</c-control-button>
-                <c-control-button onclick="document.getElementById('c-modal').display_confirm('test confirmation', () => {}, () => {})">Confirm</c-control-button>
-                <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-            </div>
-            
-            <div class="container">
-                <div id="timer-labels">
-                    <p id="early-prompt">
-                        Great job! Don't start the next task yet, reflect on your current
-                        task!
-                    </p>
-                    <p id="timer-label">Waiting</p>
-                </div>
-                <c-timer-display id="timer-display"></c-timer-display>
-                <div class="control-buttons">
-                    <!-- <button class="control" id="start-button">Start</button> -->
-                    <c-control-button id="start-button" class="start" 
-                    onclick="{
-                        if (current_task() == null) window.advance_task();
-                        if (current_task() != null) document.getElementById('timer-display').trigger_start()
-                        }">Start</c-control-button>
-                    <c-control-button id="emergency-stop-button" class="finish" onclick="document.getElementById('timer-display').trigger_emergency_stop_prompt()">Emergency Stop</c-control-button>
-                    <c-control-button id="overstudy-button" class="finish" onclick="document.getElementById('timer-display').trigger_finish_early()">Finished Early</c-control-button>
-                    <c-control-button id="add-cycle-button" class="finish" onclick="document.getElementById('timer-display').trigger_add_cycle()">Add Cycle</c-control-button>
-                </div>
-                <div class="task">
-                    <span id="current-task">Example Task</span>
-                </div>
-            </div>
+      <main>
+        <c-modal id="c-modal"></c-modal>
+        <c-settings id="c-settings" style="display: none"></c-settings>
+        <c-analysis id="c-analysis" style="display: none"></c-analysis>
+        <c-task-list id="c-task-list" style="display: initial"></c-task-list>
+        <div class="top-bar-buttons">
+          <c-control-button
+            onclick="transition(window.current_state, 'timer_open_settings')"
+            >Settings</c-control-button
+          >
+          <c-control-button
+            onclick="transition(window.current_state, 'timer_toggle_task_list')"
+            >Tasklist</c-control-button
+          >
+        </div>
 
-            <!-- should play when work and break cycles end
+        <div class="container">
+          <div id="timer-labels">
+            <p id="early-prompt">
+              Great job! Don't start the next task yet, reflect on your current
+              task!
+            </p>
+            <p id="timer-label">Waiting</p>
+          </div>
+          <c-timer-display id="timer-display"></c-timer-display>
+          <div class="control-buttons">
+            <c-control-button
+              id="start-button"
+              class="start"
+              onclick="window.start_btn()"
+              >Start</c-control-button
+            >
+            <c-control-button
+              id="emergency-stop-button"
+              class="finish"
+              onclick="window.emergency_stop_btn()"
+              >Emergency Stop</c-control-button
+            >
+            <c-control-button
+              id="overstudy-button"
+              class="finish"
+              onclick="window.finish_early_btn()"
+              >Finished Early</c-control-button
+            >
+            <c-control-button
+              id="add-cycle-button"
+              class="finish"
+              onclick="window.add_cycle_btn()"
+              >Add Cycle</c-control-button
+            >
+          </div>
+          <div class="task">
+            <span id="current-task">Example Task</span>
+          </div>
+        </div>
+
+        <!-- should play when work and break cycles end
         <audio id="alarm-sound" src="/assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
-        </main>
+      </main>
     </div>
     <footer>
-        <a href="https://github.com/ycyao216/cse110-w21-group17/wiki">Visit Team Tortellini@Github</a>
+      <a href="https://github.com/ycyao216/cse110-w21-group17/wiki"
+        >Visit Team Tortellini@Github</a
+      >
     </footer>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="module" src="/js/timer.js"></script>
-</body>
-
+  </body>
 </html>
